--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Aquesta actualització és compatible amb el selector de fotos d'iOS, de manera que podràs cercar imatges fàcilment i obtenir una vista completa dels àlbums disponibles.
+• També hem afegit un accés directe perquè puguis anar fins al missatge associat a una imatge o vídeo des de la pantalla Tots els arxius multimèdia d'un xat.
