--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Tato aktualizace zahrnuje podporu nativního voliče pro výběr fotografií v systému iOS, takže nyní můžete snadno vyhledávat obrázky a zobrazit jednotný přehled dostupných alb.
+• Přidali jsme také zkratku pro přechod na přidruženou zprávu, když si prohlížíte obrázek nebo video při zobrazení všech médií v chatu.
