--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Hvis du tålmodigt har ventet på en bedre måde at vælge billeder og videoer på i Signal, er dine forventninger nu ikke bare realistiske – de er fotorealistiske. Denne opdatering inkluderer understøttelse af den oprindelige iOS-billedvælger, så du nemt kan søge efter billeder og se en ensartet visning af tilgængelige album.
+• Vi har også tilføjet en genvej til at rulle til den tilknyttede besked, når du ser på et billede eller en video i visningen Alle medier til en chat.
