--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Wenn du geduldig darauf gewartet hast, dass sich Bilder und Videos in Signal besser auswählen lassen, sind deine Erwartungen jetzt nicht nur realistisch – sie sind fotorealistisch. Dieses Update umfasst Support für die native iOS-Fotoauswahl, damit du einfach nach Bildern suchen und eine einheitliche Ansicht der verfügbaren Alben sehen kannst.
+• Wir haben auch einen Shortcut hinzugefügt, über den du in der Medienübersicht zur dazugehörigen Nachricht scrollen kannst, wenn du dir ein Bild oder Video aus einem Chat ansiehst.
