--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Αυτή η ενημέρωση περιλαμβάνει υποστήριξη για τον εγγενή επιλογέα φωτογραφιών του iOS, ώστε να μπορείς πλέον να αναζητάς εύκολα εικόνες και να βλέπεις μια συνεπή προβολή των διαθέσιμων άλμπουμ.
+• Προσθέσαμε επίσης μια συντόμευση για να μετακινείσαι στο σχετικό μήνυμα όταν κοιτάς μια εικόνα ή ένα βίντεο στην προβολή «Όλα τα πολυμέσα» για μια συνομιλία.
