--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Si llevabas tiempo esperando una forma mejor de seleccionar imágenes y vídeos en Signal, ¡tenemos buenas noticias! Esta actualización es compatible con el selector de fotos nativo de iOS, por lo que podrás buscar imágenes con más facilidad y ver todos los álbumes disponibles.
+• También hemos añadido un acceso directo para que puedas desplazarte hasta el mensaje asociado a una imagen o vídeo desde la pantalla Todos los archivos de un chat.
