--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Tämä päivitys sisältää tuen iOS:n alkuperäiselle valokuvavalitsimelle, joten kuvien etsintä on nyt helppoa ja näet yhtenäisen näkymän saatavilla olevista albumeista.
+• Lisäsimme myös pikakuvakkeen, jolla voit vierittää aiheeseen liittyvään viestiin, kun katsot kuvaa tai videota keskustelun kaikki media -näkymässä.
