--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Attentes vs réalité : chez Signal, aucune différence ! Vous attendiez avec impatience une meilleure façon de sélectionner des photos et vidéos sur Signal ? Vos vœux sont exaucés. Grâce à cette mise à jour, profitez du sélecteur de photos natif d'iOS pour rechercher facilement des images et harmoniser l'affichage des albums disponibles.
+• Avec Signal, vos rêves de téléportation deviennent enfin réalité ! Si vous affichez une image ou regardez une vidéo depuis la section "Tous les médias", notre nouveau raccourci vous mène directement au message correspondant.
