--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• אם חיכית בסבלנות לדרך טובה יותר לבחור תמונות וסרטונים ב-Signal, כעת הציפיות שלך אינן רק ריאליסטיות - הן פוטוריאליסטיות. העדכון הזה כולל תמיכה בבורר התמונות של iOS, כך שעכשיו אפשר לחפש בקלות תמונות ולראות תצוגה אחידה של אלבומים זמינים.
+• הוספנו גם קיצור דרך שמאפשר לגלול ישירות להודעה הרלוונטית כשמחפשים תמונה או סרטון בתצוגת ׳כל המדיה׳ עבור צ׳אט מסוים.
