--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Ez a frissítés támogatja a natív iOS-fotóválasztót, így mostantól könnyedén kereshetsz képeket, és konzisztens nézetben tekintheted meg az elérhető albumokat.
+• Hozzáadtunk egy parancsikont is, amellyel a társított üzenetre görgethetsz, amikor egy képet vagy videót nézel meg az Összes média nézetben egy csevegésben.
