--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Ingin memilih gambar dan video di Signal dengan pengalaman yang lebih baik? Selamat, harapan Anda terwujud. Dengan pembaruan ini, sekarang Anda bisa menggunakan fitur pemilih foto bawaan iOS. Mencari gambar jadi lebih praktis dan tampilan album yang tersedia jadi konsisten.
+• Kami juga menambahkan pintasan yang akan mengarahkan ke pesan terkait ketika Anda melihat sebuah gambar atau video di tampilan Semua Media untuk chat.
