--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Se stavi aspettando un modo più semplice e veloce per selezionare foto e video su Signal, sappi che l'attesa è finita! Questo aggiornamento include il supporto al selezionatore foto di iOS, così puoi cercare in un attimo tra tutte le tue immagini e vedere gli album disponibili sul tuo dispositivo.
+• Abbiamo anche aggiunto una scorciatoia per scorrere al messaggio associato a un'immagine o a un video che stai vedendo nella schermata "Tutti i media" di una chat.
