--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• このアップデートにはiOS標準の写真ピッカーのサポートが含まれており、画像の簡単検索と、利用可能なアルバムの一貫した表示ができるようになりました。
+• また、チャットの「すべてのメディア」ビューで画像や動画を見ているときに、関連するメッセージまでスクロールするショートカットも追加しました。
