--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Kemas kini ini termasuk sokongan untuk pemilih foto iOS asli, jadi kini anda boleh mencari imej dengan mudah dan melihat paparan album yang konsisten.
+• Kami juga menambah pintasan untuk menatal ke mesej berkaitan semasa melihat imej atau video dalam paparan Semua Media untuk sesuatu sembang.
