--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Deze update bevat ondersteuning voor de ingebouwde iOS-fotokiezer, zodat je nu eenvoudig naar afbeeldingen kunt zoeken en een duidelijk overzicht van de beschikbare albums hebt.
+• We hebben ook een snelkoppeling toegevoegd om naar het bijbehorende bericht te gaan wanneer je een afbeelding of video bekijkt in de weergave Alle media van een chat.
