--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Denne oppdateringen kommer med støtte for iOS sin egen bildevelger, slik at det blir lettere for deg å søke etter bildene og albumene du har på enheten.
+• Vi har også lagt til en snarvei som du kan bruke for å gå til meldingene som bildene eller videoene i Alle mediefiler-siden er knyttet til.
