--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Essa atualização inclui suporte para o seletor de fotos nativo do iOS, para que você possa pesquisar imagens com facilidade e ver uma visualização consistente dos álbuns disponíveis.
+• Também adicionamos um atalho para rolar até a mensagem associada ao ver uma imagem ou vídeo na visualização "Todas as mídias" de uma conversa.
