--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Если вы терпеливо ждали лучшего способа выбора изображений и видео в Signal, то теперь ваши ожидания не просто реалистичны, а фотореалистичны. Это обновление включает поддержку встроенного меню фото для iOS, благодаря которому вы можете легко находить изображения и просматривать доступные альбомы в единообразном виде.
+• Мы также добавили ярлык для прокрутки к связанному сообщению при поиске изображения или видео в режиме «Все медиафайлы» в чате.
