--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Táto aktualizácia zahŕňa podporu pre natívny výber fotografií pre iOS, vďaka čomu môžete odteraz jednoducho vyhľadávať fotky a zobrazovať dostupné albumy.
+• Pridali sme aj skratku na posúvanie sa na súvisiacu správu pri prezeraní fotky alebo videa v zobrazení Všetky médiá pre čet.
