--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Den här uppdateringen har stöd för iOS inbyggda bildväljare, så nu kan du enkelt söka efter bilder och se en konsekvent vy över tillgängliga album.
+• Vi har också lagt till en genväg för att bläddra till det tillhörande meddelandet när du tittar på en bild eller video i vyn Alla media för en chatt.
