--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• รุ่นอัปเดตนี้มากับการรองรับกล่องตัวเลือกรูปภาพของระบบ iOS เพื่อการใช้งานที่สมูทยิ่งขึ้น ให้การเปิดดูอัลบั้มและค้นหารูปภาพสะดวกง่ายดาย ไม่มีติดขัด
+• พร้อมเพิ่มปุ่มทางลัดบนรูปภาพและวิดีโอในหน้าแสดงสื่อทั้งหมดซึ่งจะนำคุณไปยังข้อความต้นทางในแชทนั้น
