--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Bu güncelleme yerel iOS fotoğraf seçici için destek sunuyor, böylece artık kolayca resim arayabilir ve mevcut albümlerin tutarlı bir görünümünü elde edebilirsin. Yani uzun bir süre boyunca, sabırla beklemene gerek kalmadı.
+• Bunun haricinde, bir sohbet için Tüm Medya görünümünde bir resme veya videoya bakarken, ilgili mesaja kaydırman için bir kısayol da ekledik.
