--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Якщо ви терпляче чекали на зручніший спосіб вибору зображень і відео в Signal, то ваші очікування виявилися реалістичними — навіть фотореалістичними. У цьому оновленні ми додали підтримку стандартного для iOS вибору фото, і тепер ви можете легко шукати потрібні світлини й переглядати альбоми у звичному для себе форматі.
+• А ще ми додали можливість швидко переходити до відповідного повідомлення, коли ви переглядаєте зображення і відео в розділі «Усі медіафайли» в чаті.
