--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,2 +1,2 @@
-• If you've been patiently awaiting a better way to select pictures and videos in Signal, now your expectations aren't just realistic — they're photorealistic. This update includes support for the native iOS photo picker, so you can easily search for images and see a consistent view of available albums.
-• We also added a shortcut to scroll to the associated message when looking at an image or video in the All Media view for a chat.
+• Bản cập nhật này bổ sung hỗ trợ trình chọn ảnh sẵn có của iOS, giờ đây bạn có thể dễ dàng tìm hình ảnh và xem các album khả dụng một cách xuyên suốt.
+• Chúng tôi cũng đã thêm một phím tắt để cuộn đến tin nhắn liên quan khi xem hình ảnh hoặc video trong chế độ xem Tất cả đa phương tiện cho một cuộc trò chuyện.
